Update UI: Change font to Montserrat and replace phone number with support icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CloudTech Solutions - Smart Cloud Development</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -25,9 +25,8 @@
                 <a href="#tools" class="nav-link">Cloud Tools</a>
             </div>
             <div class="nav-contact">
-                <i class="fas fa-phone"></i>
-                <span>+1 (555) 123-4567</span>
-                <span class="availability">Available 24/7</span>
+                <i class="fas fa-headset"></i>
+                <span>24/7 Support</span>
             </div>
         </div>
     </nav>
