Remove 24/7 text and replace with cloud upload icon, add hover effects

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 <a href="#tools" class="nav-link">Cloud Tools</a>
             </div>
             <div class="nav-contact">
-                <i class="fas fa-headset"></i>
-                <span>24/7 Support</span>
+                <i class="fas fa-cloud-upload-alt"></i>
             </div>
         </div>
     </nav>
