--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#tools" class="nav-link">Cloud Tools</a>
             </div>
             <div class="nav-contact">
-                <i class="fas fa-cloud-upload-alt"></i>
+                <img src="images/background.png" alt="Cloud Support" style="width: 24px; height: 24px;">
             </div>
         </div>
     </nav>
