Fix image display issues - remove filters and add fallback

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <a href="#tools" class="nav-link">Cloud Tools</a>
             </div>
             <div class="nav-contact">
-                <img src="images/background.png" alt="Cloud Support" style="width: 24px; height: 24px;">
+                <img src="images/background.png" alt="Cloud Support" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';">
+                <i class="fas fa-cloud" style="display: none;"></i>
             </div>
         </div>
     </nav>
