Move PNG image to hero section behind cloud circles

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 <a href="#tools" class="nav-link">Cloud Tools</a>
             </div>
             <div class="nav-contact">
-                <img src="images/background.png" alt="Cloud Support" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';">
-                <i class="fas fa-cloud" style="display: none;"></i>
+                <i class="fas fa-cloud"></i>
             </div>
         </div>
     </nav>
@@ -52,6 +51,7 @@
             </div>
             <div class="hero-visual">
                 <div class="cloud-animation">
+                    <img src="images/background.png" alt="Cloud Background" class="cloud-background">
                     <div class="cloud aws-cloud">
                         <i class="fab fa-aws"></i>
                     </div>
