Fix UI: Remove big button, make PNG large background illustration like Flentas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#tools" class="nav-link">Cloud Tools</a>
             </div>
             <div class="nav-contact">
-                <i class="fas fa-cloud"></i>
+                <a href="#" class="contact-link">Contact</a>
             </div>
         </div>
     </nav>
@@ -50,8 +50,10 @@
                 </div>
             </div>
             <div class="hero-visual">
+                <div class="hero-illustration">
+                    <img src="images/background.png" alt="Cloud Illustration" class="hero-bg-image">
+                </div>
                 <div class="cloud-animation">
-                    <img src="images/background.png" alt="Cloud Background" class="cloud-background">
                     <div class="cloud aws-cloud">
                         <i class="fab fa-aws"></i>
                     </div>
