--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav-menu">
                 <a href="#work" class="nav-link">Work</a>
                 <a href="#blog" class="nav-link">Blog</a>
-                <a href="#services" class="nav-link">Services</a>
+                <a href="services.html" class="nav-link">Services</a>
                 <a href="#career" class="nav-link">Career</a>
                 <a href="#about" class="nav-link">About</a>
                 <a href="#tools" class="nav-link">Cloud Tools</a>
